# PUC-admin

./: .gitignore  LICENSE  README.md  deploy.sh  pyproject.toml  requirements.txt  scratch_4.py
PUCadmin/: manage.py
PUCadmin/PUCadmin/: admin.py  settings.py  wsgi.py
PUCadmin/organisations/: admin.py  models.py
PUCadmin/organisations/migrations/: 0001_initial.py  0002_auto_20210708_1526.py
PUCadmin/questions/: admin.py  models.py
PUCadmin/schools/: admin.py  resources.py
PUCadmin/schools/migrations/: 0001_initial.py
pucadmin/: manage.py  saml-metadata.xml
pucadmin/PUCadmin/: admin.py  urls.py  utils.py  wsgi.py
pucadmin/PUCadmin/settings/: base.py  development.py  production.py.example
pucadmin/competitions/: admin.py  apps.py  models.py  resources.py
pucadmin/competitions/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20210715_1808.py  0004_competition_competition_date.py  0005_auto_20210718_1147.py  0006_competition_nomination_date.py  0007_auto_20210725_2328.py  0008_auto_20210803_1621.py  0009_alter_submission_document.py
pucadmin/frontoffice/: forms.py  tests.py  urls.py  views.py
pucadmin/frontoffice/templates/: competition-submission-success.html  competition_submission_form.html  question-submission-success.html  question_submission_form.html  submission_form.html
pucadmin/organisations/: admin.py  apps.py  models.py
pucadmin/organisations/migrations/: 0001_initial.py  0002_auto_20210708_1526.py  0003_auto_20210715_1808.py  0004_auto_20210718_1147.py  0005_alter_course_name.py  0006_course_gov_slug.py  0007_remove_course_gov_slug_course_gov_slugs.py
pucadmin/questions/: admin.py  apps.py  models.py  services.py  tests.py
pucadmin/questions/migrations/: 0001_initial.py  0002_auto_20210715_1808.py  0003_auto_20210718_1147.py  0004_alter_question_options.py  0005_alter_question_options.py  0006_question_expected_end_date.py  0007_auto_20211126_2029.py  0008_alter_question_tags.py  (+2 more)
pucadmin/schools/: admin.py  apps.py  models.py
pucadmin/secondments/: admin.py  apps.py  models.py  resources.py
pucadmin/secondments_frontoffice/: forms.py  urls.py  views.py
pucadmin/sp/: models.py
(+32 files in other folders)
