[tool.poetry]
name = "pucadmin"
version = "1.1.0"
description = "Django website to manage questions from high school students and submissions for competitions"
authors = ["Job Doesburg <job.doesburg@ru.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
django-import-export = "^3.1.0"
django-autocompletefilter = "^0.0.8"
django-saml-sp = {git = "https://github.com/imsweb/django-saml-sp.git"}
django-taggit = "^3.1.0"
taggit-selectize = "^2.11.0"
django-bootstrap5 = "^22.2"

[tool.poetry.dev-dependencies]
black = "23.1.0"

[tool.black]
target-version = ["py38"]
exclude = '(/(\.eggs|\.git|\.tox)/|migrations)'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
